# egeria-advisor

./: .gitignore  CLAUDE.md  Project-Explorer.md  README.md  pyproject.toml
advisor/: action_catalog.py  collection_config.py  collection_router.py  config.py  feedback_collector.py  governance_docs.py  governance_draft.py  llm_client.py  llm_intent_classifier.py  mcp_agent.py  mcp_client.py  metrics_collector.py  multi_collection_store.py  perspective_manager.py  plan_templates.py  plan_validator.py  prompt_templates.py  query_patterns.py  rag_system.py  report_pipeline.py  session_logger.py  vector_store.py  vector_store_base.py  vector_store_pg.py
advisor/agents/: base.py  doc_agent.py  dr_egeria_agent.py  dre_template_agent.py  examples_agent.py  governance_plan_agent.py  outcome_reporter.py  plan_elicitor.py  pyegeria_agent.py  tools.py
advisor/cli/: formatters.py  interactive.py  main.py  plans.py
advisor/data_prep/: cli_indexer.py  code_parser.py  doc_parser.py  example_extractor.py  metadata_extractor.py  pipeline.py
advisor/web/: admin.py  app.py
advisor/web/static/: admin.html  artifact_canvas.js  index.html  plan_canvas.js  plan_editor.js
config/: advisor.yaml  dr_egeria_actions.yaml  governance_report_map.yaml  perspective_template_families.csv  perspectives.csv  report_specs_annotated.json  routing.yaml
config/report_specs/: developer_question_specs.json  plain_spec_question_specs_batch1.json  report_specs_annotated.json
docs/: literate-governance-plan.md
docs/user-docs/: LITERATE_GOVERNANCE_GUIDE.md  MONITORING_DASHBOARD_DESIGN.md  PROMPT_PATTERNS_GUIDE.md  QUERY_ROUTING_GUIDE.md  QUICK_START.md  REPO_UPDATE_GUIDE.md
scripts/: count_vectors.py  generate_question_specs.py  ingest_collections.py  migrate_milvus_to_pgvector.py  verify_pgvector_migration.py
